# ZTAgent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  plan.md  pyproject.toml
scripts/: claude_direct.py  run_go_demo.py  test_e2e.py  view_log.py
src/employee_agent/: __main__.py  config.py  controller_client.py  main.py  runner.py  scheduler.py
src/employee_agent/browser/: auth.py  factory.py  session.py
src/employee_agent/llm/: __init__.py  breaker.py  budgets.py  provider.py
src/employee_agent/observability/: logger.py  resources.py
src/employee_agent/reporting/: events.py  results.py
src/employee_agent/sites/: base.py  dms.py  groupoffice.py
src/employee_agent/sites/prompts/: dms_system.md  groupoffice_system.md
tests/unit/: test_action_mapper.py  test_budget_guard.py  test_circuit_breaker.py  test_controller_client.py  test_llm_provider.py  test_runner_state_machine.py  test_scheduler_jitter.py  test_storage_state.py
tools/: diversity_audit.py
