[project]
name = "employee-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.49.0",
    "browser-use>=0.12.0",
    "litellm>=1.50.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.0",
    "pyyaml>=6.0.2",
    "structlog>=24.4.0",
    "anyio>=4.6.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
]

[project.scripts]
employee-agent = "employee_agent.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/employee_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]